--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CXX := g++ # Compiler
 CXXFLAGS := -std=c++17 -O3 # Compiler flags
-LDFLAGS := -L /home/daanish/projects/DiploidGenomeAssembly/libdivsufsort/build/lib -L ~/lib # Library paths
-INCLUDES := -I /home/daanish/projects/DiploidGenomeAssembly/libdivsufsort/build/include -I ~/include # Include paths
+LDFLAGS := -L ../libdivsufsort/build/lib -L ~/lib # Library paths
+INCLUDES := -I ../libdivsufsort/build/include -I ~/include # Include paths
 LIBS := -ldivsufsort -lsdsl # Libraries
 
 TARGETS := summary # Change this to your desired executable name 
